--- a/api/chat-sv/appsettings.json
+++ b/api/chat-sv/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "CorsName": "chat-sv-cors"
+  "CorsName": "chat-sv-cors",
+  "MongoSetting": {
+    "ConnectionString": "mongodb://root:password@192.168.49.2:30017/"
+  }
 }
