add user authentication service

--- a/api/chat-sv/appsettings.json
+++ b/api/chat-sv/appsettings.json
@@ -9,5 +9,10 @@
   "CorsName": "chat-sv-cors",
   "MongoSetting": {
     "ConnectionString": "mongodb://root:password@192.168.49.2:30017/"
+},
+  "Jwt": {
+    "Secret": "your-very-long-secret",
+    "Issuer": "your-issuer",
+    "Audience": "your-audience"
   }
 }
